Thi công giao diện

--- a/index.html
+++ b/index.html
@@ -104,13 +104,42 @@
                 <div class="row">
                     <div class="col-2 menu">
                         <div class="menu-item">
-                            <a href="#" class="nav-link">Menu Cha <span class="arrow">&gt;</span></a>
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/sirloin-steak.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Thịt nhập khẩu</a>
+                            </div>
+                           
                             <div class="submenu container">
                                 <div class="row">
                                     <div class="col border">Menu Con 1</div>
                                     <div class="col border">Menu Con 2</div>
                                     <div class="col border">Menu Con 3</div>
                                 </div>
+                            </div>
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/lobster.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Hải sản nhập khẩu</a>
+                            </div>
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/hot-pot.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Set box tiện lợi</a>
+                            </div>
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/cooking.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Nước sốt, gia vị</a>
+                            </div>
+
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/drink.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Dầu ăn, Bơ & phô mai</a>
+                            </div>
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/kitchenware.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Rau củ quả & Mỳ</a>
+                            </div>
+                            <div class="item-parent d-flex align-items-center">
+                                <img class="img-fluid me-2" alt="Thịt nhập khẩu" src="https://cdn1364.cdn-template-4s.com/media/category/cooking.svg" style="height: 20px;">
+                                <a href="#" class="nav-link">Sản phẩm khác</a>
                             </div>
                         </div>
                     </div>
@@ -150,7 +179,156 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <div class="container product-flash-sale mt-3 mb-3">
+                <div class="row ">
+                    <div class="col-12 d-flex align-items-center ms-3 me-3 mt-3 mb-4" >
+                        <img style="height: 50px;" class="img-fluid me-2" alt="icon" src="https://thucpham01.themeweb4s.com/templates/fashion02/assets/media/icon/icon-flash.png">
+                        <h3>Giá sốc hôm nay</h3>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center product-flash-sale-item">
+                    <div class="col-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 8%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/nuoc-sot-hai-san-lee-kum-kee-410ml/nuoc-sot-hai-san-lee-kum-kee-410ml.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Nước sốt hải sản Lee Kum Kee 410ml</p>
+                                <span class="price-amount fs-18">60,000đ</span></br>
+                                <span class="old-amount color-text-default">65,000d</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 20%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/than-noi-bo-my/choice-loai-cao-cap-than-noi-bo-my-tenderloin-beef-usda.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Choice (loại cao cấp) - Thăn nội bò Mỹ - ...</p>
+                                <span class="price-amount fs-18">1,087,000đ</span></br>
+                                <span class="old-amount color-text-default">1,359,000đ</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 11%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/suon-hoang-de-bo-my/choice-loai-cao-cap-suon-hoang-de-bo-my.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Choice (loại cao cấp) - Sườn Hoàng Đế bò Mỹ</p>
+                                <span class="price-amount fs-18">100.000đ</span></br>
+                                <span class="old-amount color-text-default">200.000đ</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 21%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/ca-tuyet-nauy/ca-tuyet-nauy.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Cá tuyết Nauy fillet - Norwegian Cod</p>
+                                <span class="price-amount fs-18">100.000đ</span></br>
+                                <span class="old-amount color-text-default">200.000đ</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container mt-3">
+                <div class="row img-banner-wraper">
+                    <img class="img-fluid img-banner" alt="Banner" src="https://cdn1364.cdn-template-4s.com/media/banner/banner-3.png" style="">
+                </div>
+            </div>
+            <div class="container mt-3">
+                <h3 class="fs-24 color-text-blue fw-bold">Đang khuyến mại</h3>
+                <div class="row">
+                    <div class="col-3 mt-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 8%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/nuoc-sot-hai-san-lee-kum-kee-410ml/nuoc-sot-hai-san-lee-kum-kee-410ml.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Nước sốt hải sản Lee Kum Kee 410ml</p>
+                                <span class="price-amount fs-18">60,000đ</span></br>
+                                <span class="old-amount color-text-default">65,000d</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 mt-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 8%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/nuoc-sot-hai-san-lee-kum-kee-410ml/nuoc-sot-hai-san-lee-kum-kee-410ml.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Nước sốt hải sản Lee Kum Kee 410ml</p>
+                                <span class="price-amount fs-18">60,000đ</span></br>
+                                <span class="old-amount color-text-default">65,000d</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 mt-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 8%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/nuoc-sot-hai-san-lee-kum-kee-410ml/nuoc-sot-hai-san-lee-kum-kee-410ml.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Nước sốt hải sản Lee Kum Kee 410ml</p>
+                                <span class="price-amount fs-18">60,000đ</span></br>
+                                <span class="old-amount color-text-default">65,000d</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 mt-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 8%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/nuoc-sot-hai-san-lee-kum-kee-410ml/nuoc-sot-hai-san-lee-kum-kee-410ml.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Nước sốt hải sản Lee Kum Kee 410ml</p>
+                                <span class="price-amount fs-18">60,000đ</span></br>
+                                <span class="old-amount color-text-default">65,000d</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 mt-3">
+                        <div class="card position-relative">
+                            <span class="discount-percent position-absolute">Giảm 8%</span>
+                            <img src="https://cdn1364.cdn-template-4s.com/media/san-pham-5s/nuoc-sot-hai-san-lee-kum-kee-410ml/nuoc-sot-hai-san-lee-kum-kee-410ml.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text color-text-default">Nước sốt hải sản Lee Kum Kee 410ml</p>
+                                <span class="price-amount fs-18">60,000đ</span></br>
+                                <span class="old-amount color-text-default">65,000d</span></br>
+                                <div class="mt-3 d-flex justify-content-center btn-add-card-wraper">
+                                    <a href="#" class="btn btn-add-card">Thêm giỏ hàng</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
